Worked on feedback. Implemented new media queries for mobile and text compression. Fixed header on mobile sizes, changed button psuedo classes

--- a/blocks/add-button.css
+++ b/blocks/add-button.css
@@ -25,9 +25,8 @@
     transition: opacity 2s ease-in-out;
   }
 
-  .add-button:hover,
-  .add-button:active {
-    opacity: 0.7;
+  .add-button:focus {
+    opacity: 0.6;
   }
 }
 
@@ -35,6 +34,6 @@
   .add-button {
     max-width: 282px;
     padding: 0;
-    margin: 35px 0 35px 0;
+    margin: 35px 0 0;
   }
 }
