--- a/blocks/header.css
+++ b/blocks/header.css
@@ -19,8 +19,8 @@
   }
 
   .header {
-    width: 100vw;
-    margin-left: calc(-50vw + 50%);
-    margin-right: calc(-50vw + 50%);
+    width: 100%;
+    margin: 0 0 40px;
+    padding: 0;
   }
 }
